re PR tree-optimization/59025 (Revision 203979 causes failure in CPU2006 benchmark 435.gromacs)

PR tree-optimization/59025
	PR middle-end/60418
	* tree-ssa-reassoc.c (sort_by_operand_rank): For SSA_NAMEs with the
	same rank, sort by bb_rank and gimple_uid of SSA_NAME_DEF_STMT first.

From-SVN: r208535